UO258643/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;
import ast.*;import ast.DefVariable.VarScope;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		INT_CONSTANT=39, REAL_CONSTANT=40, CHAR_CONSTANT=41, IDENT=42, LINE_COMMENT=43, 
		MULTILINE_COMMENT=44, WHITESPACE=45;
	public static final int
		RULE_start = 0, RULE_definitions = 1, RULE_definition = 2, RULE_structParams = 3, 
		RULE_structParam = 4, RULE_defVariables = 5, RULE_defVariable = 6, RULE_defFunc = 7, 
		RULE_sentences = 8, RULE_sentence = 9, RULE_params = 10, RULE_args = 11, 
		RULE_expr = 12, RULE_type = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definitions", "definition", "structParams", "structParam", 
			"defVariables", "defVariable", "defFunc", "sentences", "sentence", "params", 
			"args", "expr", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "'}'", "';'", "':'", "'var'", "'('", "')'", 
			"'='", "'if'", "'else'", "'while'", "'return'", "'read'", "'print'", 
			"'printsp'", "'println'", "','", "'['", "']'", "'.'", "'*'", "'/'", "'+'", 
			"'-'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'!'", "'&&'", "'||'", 
			"'cast'", "'int'", "'float'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "IDENT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((StartContext)_localctx).definitions = definitions();
			setState(29);
			match(EOF);
			((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).definitions.list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public DefinitionContext definition;
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << IDENT))) != 0)) {
				{
				{
				setState(32);
				((DefinitionsContext)_localctx).definition = definition();
				_localctx.list.add(((DefinitionsContext)_localctx).definition.ast); 
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public Definition ast;
		public DefVariableContext defVariable;
		public Token IDENT;
		public StructParamsContext structParams;
		public DefFuncContext defFunc;
		public DefVariableContext defVariable() {
			return getRuleContext(DefVariableContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public StructParamsContext structParams() {
			return getRuleContext(StructParamsContext.class,0);
		}
		public DefFuncContext defFunc() {
			return getRuleContext(DefFuncContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				((DefinitionContext)_localctx).defVariable = defVariable();
				((DefinitionContext)_localctx).ast =  ((DefinitionContext)_localctx).defVariable.ast;
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(T__0);
				setState(44);
				((DefinitionContext)_localctx).IDENT = match(IDENT);
				setState(45);
				match(T__1);
				setState(46);
				((DefinitionContext)_localctx).structParams = structParams();
				setState(47);
				match(T__2);
				setState(48);
				match(T__3);
				((DefinitionContext)_localctx).ast =  new DefStruct(new VarType(((DefinitionContext)_localctx).IDENT), ((DefinitionContext)_localctx).structParams.list);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				((DefinitionContext)_localctx).defFunc = defFunc();
				((DefinitionContext)_localctx).ast =  ((DefinitionContext)_localctx).defFunc.ast;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructParamsContext extends ParserRuleContext {
		public List<StructParam> list = new ArrayList<StructParam>();
		public StructParamContext structParam;
		public List<StructParamContext> structParam() {
			return getRuleContexts(StructParamContext.class);
		}
		public StructParamContext structParam(int i) {
			return getRuleContext(StructParamContext.class,i);
		}
		public StructParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structParams; }
	}

	public final StructParamsContext structParams() throws RecognitionException {
		StructParamsContext _localctx = new StructParamsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(56);
				((StructParamsContext)_localctx).structParam = structParam();
				_localctx.list.add(((StructParamsContext)_localctx).structParam.ast); 
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructParamContext extends ParserRuleContext {
		public StructParam ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StructParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structParam; }
	}

	public final StructParamContext structParam() throws RecognitionException {
		StructParamContext _localctx = new StructParamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(64);
			((StructParamContext)_localctx).IDENT = match(IDENT);
			setState(65);
			match(T__4);
			setState(66);
			((StructParamContext)_localctx).type = type();
			setState(67);
			match(T__3);
			}
			((StructParamContext)_localctx).ast =  new StructParam(((StructParamContext)_localctx).IDENT, ((StructParamContext)_localctx).type.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefVariablesContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public Token IDENT;
		public TypeContext type;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public DefVariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVariables; }
	}

	public final DefVariablesContext defVariables() throws RecognitionException {
		DefVariablesContext _localctx = new DefVariablesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defVariables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(71);
				match(T__5);
				setState(72);
				((DefVariablesContext)_localctx).IDENT = match(IDENT);
				setState(73);
				match(T__4);
				setState(74);
				((DefVariablesContext)_localctx).type = type();
				setState(75);
				match(T__3);
				_localctx.list.add(new DefVariable(((DefVariablesContext)_localctx).IDENT, ((DefVariablesContext)_localctx).type.ast, VarScope.LOCAL));
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefVariableContext extends ParserRuleContext {
		public Definition ast;
		public Token IDENT;
		public TypeContext type;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVariable; }
	}

	public final DefVariableContext defVariable() throws RecognitionException {
		DefVariableContext _localctx = new DefVariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__5);
			setState(84);
			((DefVariableContext)_localctx).IDENT = match(IDENT);
			setState(85);
			match(T__4);
			setState(86);
			((DefVariableContext)_localctx).type = type();
			setState(87);
			match(T__3);
			((DefVariableContext)_localctx).ast =  new DefVariable(((DefVariableContext)_localctx).IDENT, ((DefVariableContext)_localctx).type.ast, VarScope.GLOBAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefFuncContext extends ParserRuleContext {
		public Definition ast;
		public Token IDENT;
		public ParamsContext params;
		public TypeContext type;
		public DefVariablesContext defVariables;
		public SentencesContext sentences;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefVariablesContext defVariables() {
			return getRuleContext(DefVariablesContext.class,0);
		}
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public DefFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defFunc; }
	}

	public final DefFuncContext defFunc() throws RecognitionException {
		DefFuncContext _localctx = new DefFuncContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_defFunc);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				((DefFuncContext)_localctx).IDENT = match(IDENT);
				setState(91);
				match(T__6);
				setState(92);
				((DefFuncContext)_localctx).params = params();
				setState(93);
				match(T__7);
				setState(94);
				match(T__4);
				setState(95);
				((DefFuncContext)_localctx).type = type();
				setState(96);
				match(T__1);
				setState(97);
				((DefFuncContext)_localctx).defVariables = defVariables();
				setState(98);
				((DefFuncContext)_localctx).sentences = sentences();
				setState(99);
				match(T__2);
				((DefFuncContext)_localctx).ast =  new DefFunc(((DefFuncContext)_localctx).IDENT, ((DefFuncContext)_localctx).params.list, ((DefFuncContext)_localctx).type.ast, ((DefFuncContext)_localctx).defVariables.list, ((DefFuncContext)_localctx).sentences.list);
						
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				((DefFuncContext)_localctx).IDENT = match(IDENT);
				setState(103);
				match(T__6);
				setState(104);
				((DefFuncContext)_localctx).params = params();
				setState(105);
				match(T__7);
				setState(106);
				match(T__1);
				setState(107);
				((DefFuncContext)_localctx).defVariables = defVariables();
				setState(108);
				((DefFuncContext)_localctx).sentences = sentences();
				setState(109);
				match(T__2);
				((DefFuncContext)_localctx).ast =  new DefFunc(((DefFuncContext)_localctx).IDENT, ((DefFuncContext)_localctx).params.list, new VoidType(), ((DefFuncContext)_localctx).defVariables.list, ((DefFuncContext)_localctx).sentences.list);
						
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentencesContext extends ParserRuleContext {
		public List<Sentence> list = new ArrayList<Sentence>();
		public SentenceContext sentence;
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentences; }
	}

	public final SentencesContext sentences() throws RecognitionException {
		SentencesContext _localctx = new SentencesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sentences);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__31) | (1L << T__34) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << IDENT))) != 0)) {
				{
				{
				setState(114);
				((SentencesContext)_localctx).sentence = sentence();
				 _localctx.list.add(((SentencesContext)_localctx).sentence.ast); 
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Sentence ast;
		public SentencesContext sentences;
		public Token IDENT;
		public ArgsContext args;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<SentencesContext> sentences() {
			return getRuleContexts(SentencesContext.class);
		}
		public SentencesContext sentences(int i) {
			return getRuleContext(SentencesContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sentence);
		try {
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				expr(0);
				setState(123);
				match(T__8);
				setState(124);
				expr(0);
				setState(125);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Assignment(_localctx.expr(0), _localctx.expr(1));
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(T__9);
				setState(129);
				match(T__6);
				setState(130);
				expr(0);
				setState(131);
				match(T__7);
				setState(132);
				match(T__1);
				setState(133);
				sentences();
				setState(134);
				match(T__2);
				((SentenceContext)_localctx).ast =  new IfElse(_localctx.expr(0), _localctx.sentences(0).list, null);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				match(T__9);
				setState(138);
				match(T__6);
				setState(139);
				expr(0);
				setState(140);
				match(T__7);
				setState(141);
				match(T__1);
				setState(142);
				sentences();
				setState(143);
				match(T__2);
				setState(144);
				match(T__10);
				setState(145);
				match(T__1);
				setState(146);
				sentences();
				setState(147);
				match(T__2);
				((SentenceContext)_localctx).ast =  new IfElse(_localctx.expr(0), _localctx.sentences(0).list, _localctx.sentences(1).list);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				match(T__11);
				setState(151);
				match(T__6);
				setState(152);
				expr(0);
				setState(153);
				match(T__7);
				setState(154);
				match(T__1);
				setState(155);
				((SentenceContext)_localctx).sentences = sentences();
				setState(156);
				match(T__2);
				((SentenceContext)_localctx).ast =  new While(_localctx.expr(0), ((SentenceContext)_localctx).sentences.list);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(159);
				match(T__12);
				setState(160);
				expr(0);
				setState(161);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Return(_localctx.expr(0));
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(164);
				match(T__12);
				setState(165);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Return(new VoidExpr());
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(167);
				match(T__13);
				setState(168);
				expr(0);
				setState(169);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Read(_localctx.expr(0));
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(172);
				match(T__14);
				setState(173);
				expr(0);
				setState(174);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Print(_localctx.expr(0));
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(177);
				match(T__15);
				setState(178);
				expr(0);
				setState(179);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Printsp(_localctx.expr(0));
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(182);
				match(T__16);
				setState(183);
				expr(0);
				setState(184);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Println(_localctx.expr(0));
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(187);
				match(T__16);
				setState(188);
				match(T__3);
				((SentenceContext)_localctx).ast =  new Println(new VoidExpr());
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(190);
				((SentenceContext)_localctx).IDENT = match(IDENT);
				setState(191);
				match(T__6);
				setState(192);
				((SentenceContext)_localctx).args = args();
				setState(193);
				match(T__7);
				setState(194);
				match(T__3);
				((SentenceContext)_localctx).ast =  new FuncSentence(((SentenceContext)_localctx).IDENT, ((SentenceContext)_localctx).args.list);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public Token IDENT;
		public TypeContext type;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(199);
				((ParamsContext)_localctx).IDENT = match(IDENT);
				setState(200);
				match(T__4);
				setState(201);
				((ParamsContext)_localctx).type = type();
				_localctx.list.add(new DefVariable(((ParamsContext)_localctx).IDENT, ((ParamsContext)_localctx).type.ast, VarScope.PARAM));
				setState(211);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__17) {
					{
					{
					setState(203);
					match(T__17);
					setState(204);
					((ParamsContext)_localctx).IDENT = match(IDENT);
					setState(205);
					match(T__4);
					setState(206);
					((ParamsContext)_localctx).type = type();
					_localctx.list.add(new DefVariable(((ParamsContext)_localctx).IDENT, ((ParamsContext)_localctx).type.ast, VarScope.PARAM));
					}
					}
					setState(213);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<Expression> list = new ArrayList<Expression>();
		public ExprContext expr;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
	}
